more fixes om responsiveness of resume on mobile

--- a/cv.css
+++ b/cv.css
@@ -23,7 +23,7 @@ body {
       font-size: 40%; } }
   @media only screen and (max-width: 480px) and (min-width: 0) {
     body {
-      font-size: 10%; } }
+      font-size: 5%; } }
 
 .container {
   background-color: white;
@@ -77,7 +77,8 @@ li {
   word-wrap: break-word; }
 
 ul {
-  margin: -5px 0; }
+  margin: -5px 0;
+  padding: 0 10%; }
 
 * {
   -webkit-box-sizing: border-box;
