--- a/scss/custom/_cv.scss
+++ b/scss/custom/_cv.scss
@@ -51,7 +51,7 @@ body{
 	}
 
 	@include media-query-horizontal($screen-xs, 0){
-		font-size: 10%;
+		font-size: 5%;
 	}
 }
 
@@ -121,4 +121,5 @@ li{
 }
 ul{
 	margin: -5px 0;
+	padding: 0 10%;
 }
